edit special prohject assistant so inclue special project consultant

--- a/Work/mcmasterSPA/index.html
+++ b/Work/mcmasterSPA/index.html
@@ -44,10 +44,16 @@
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-
 				<li>Collaborated with the Engineering Dean's Office to oversee the strategic planning and logistical execution of major outreach events.</li>
 				<li>Successfully orchestrated a high-profile District-level Robotics Competition, accommodating more than 1200 high school participants.</li>
 				<li>Skillfully coordinated resources and fostered productive partnerships with both McMaster University and FIRST Robotics staff to ensure seamless event operations.</li>
+				<li>Guided pre-event organizational meetings.</li>
+				<li>Successfully recruited, trained, and managed event volunteers and judges.</li>
+				<li>Advised on event best practices and potential challenges.</li>
+				<li>Acted as the primary liaison between McMaster and FIRST Robotics during the event.</li>
+				<li>Conducted post-event debrief sessions, providing valuable feedback.</li>
+				<li>Documented essential improvements for future events.</li>
+
 
 			</ul>
 		</div>
