--- a/Work/capreit/index.html
+++ b/Work/capreit/index.html
@@ -44,11 +44,13 @@
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-				<li>Imaging and customizing PC’s and laptops.</li>
-				<li>Support head office users for printer supplies.</li>
-				<li>Inventory documentation and reconciliation.</li>
-				<li>Help Desk support calls.</li>
-				<li>Other duties as may be assigned.</li>
+				<li>Expertly reconfigured and optimized room setups for conferences, ensuring a seamless experience for participants.</li>
+				<li>Meticulously managed and documented inventory for both laptop and desktop computers, ensuring accurate records.</li>
+				<li>Proficiently imaged and customized PCs and laptops, enhancing user efficiency and productivity.</li>
+				<li>Played a pivotal role in coordinating and executing a nationwide hardware upgrade initiative across CAPREIT rental offices.</li>
+				<li>Provided critical support to Head Office users, swiftly troubleshooting printer issues and managing supplies.</li>
+				<li>Collaborated with full-time staff to address Help Desk Support calls, ensuring minimal disruption and swift issue resolution.</li>
+				<li>Thrived in a dynamic environment, expertly prioritizing tasks and managing competing deadlines to meet organizational goals.</li>
 			</ul>
 		</div>
 	</div>
@@ -80,7 +82,9 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>I am responsible for assisting the IT Support staff with any necessary task. This usually involves repairing broken computers and printers, disposing of old machines, and assisting in upgrading machines at CAPREIT's regional sites. One of my biggest accomplishment this year was to be able take calls and actively help users over the phone. this was a great experience because it helped me enhance my communication skills. I became more comfortable talking to strangers and immediately helping them out.</p>
+		<p>In my role, I was tasked with providing support to the IT team by undertaking various essential tasks. This primarily encompassed the repair of malfunctioning computers and printers, as well as the responsible disposal of outdated equipment. Additionally, I played a role in upgrading machines at CAPREIT's regional sites.
+
+			One of my notable achievements during my tenure was the ability to handle and assist users efficiently through phone calls. This experience significantly contributed to the improvement of my communication skills, making me more adept at engaging with unfamiliar individuals and promptly addressing their needs.</p>
 	</div>
 	
 </body>
