--- a/Work/ctw/index.html
+++ b/Work/ctw/index.html
@@ -44,12 +44,12 @@
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-				<li>Plans, develops, leads and evaluates a variety of camp programs.</li>
-				<li>Organizes, implements and oversees activities and events according to the timetable and curriculum provided.</li>
-				<li>Takes action to deal with incidents, problems and emergencies and parent concerns in accordance with camp policy.</li>
-				<li>Serve as a positive role model to the campers.</li>
-				<li>responsible for the well being of all the campers and coworkers.</li>
-				<li>Maintain regular commnication about the camp's progress with the parents and the supervisor.</li>
+				<li>Inspired young minds, ages 7-13, by teaching them the art of designing robots that could perform designated tasks using LEGO Mindstorms, fostering creativity and problem-solving skills.</li>
+				<li>Provided hands-on training in creating animations and graphic art, empowering students to craft compelling presentation materials.</li>
+				<li>Cultivated a passion for game design, sparking interest and innovation among the students.</li>
+				<li>Maintained open communication with students' parents and caregivers, ensuring transparency in tracking student progress and addressing any concerns.</li>
+				<li>Prioritized safety, creating a secure environment for children and taking immediate action in the event of an accident.</li>
+
 			</ul>
 		</div>
 	</div>
@@ -82,7 +82,9 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>I am responsible for assisting the IT Support staff with any necessary task. This usually involves repairing broken computers and printers, disposing of old machines, and assisting in upgrading machines at CAPREIT's regional sites. One of my biggest accomplishment this year was to be able take calls and actively help users over the phone. this was a great experience because it helped me enhance my communication skills. I became more comfortable talking to strangers and immediately helping them out.</p>
+		<p>In my role, I was responsible for providing support to the IT Support staff by undertaking various essential tasks. This typically included tasks such as repairing malfunctioning computers and printers, managing the disposal of outdated equipment, and assisting in the upgrade of machines at CAPREIT's regional sites.
+
+			One of my most significant achievements during the year was acquiring the ability to efficiently handle phone calls and assist users remotely. This experience was highly valuable as it contributed significantly to the enhancement of my communication skills. I grew more comfortable in conversing with unfamiliar individuals and promptly addressing their needs, making it a rewarding professional development experience.</p>
 	</div>
 	
 </body>
