--- a/Work/thales/index.html
+++ b/Work/thales/index.html
@@ -44,13 +44,12 @@
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-				<li>Worked in an exclusive team tasked to reduce product testing times by 80%</li>
-				<li>Work with a team to develop tools and practices to automate software system and subsystem level tests for automated trains.</li>
-				<li>Develop, maintain and debug the Automated Testing software using C++</li>
-				<li>Design and develop a new graphincal, web based solution to generate automated test procedures</li>
-				<li>Train teaters on how to use Automted Testing Tools</li>
-				<li>Work with the users to take feedback and continue improving the automated testing</li>
-				<li>Accurately document all changes to sotware while following company procedure</li>
+				<li>Contributed significantly to THALES' ambitious project, achieving an impressive 80% reduction in system testing time, demonstrating a commitment to innovation and efficiency.</li>
+				<li>Successfully debugged C++ based full system regression testing software, ensuring the software's reliability and functionality.</li>
+				<li>Took on the responsibility of training the Validation and Verification team in the proficient use of testing software, fostering team collaboration and skill development.</li>
+				<li>Collaborated cross-functionally to implement Jenkins and SonarQube for automated code checks, streamlining the development process.</li>
+				<li>Designed and developed a user-friendly Script Development environment for automated tests, enhancing efficiency and ease of use.</li>
+				<li>Introduced effective revision control practices within the team using GIT, ensuring code integrity and version management.</li>
 			</ul>
 		</div>
 	</div>
@@ -83,10 +82,12 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>Working at THALS was an amazing experience. Working in
-		 the Research and Development department, I have learned a
-		 lot about how large firms begin new software projects and
-		 what goes into mintaining prexisting software.</p>
+		<p>My time at THALES was truly enlightening. As part of the Research and Development department, I had the opportunity to contribute significantly to a high-impact project, resulting in an impressive 80% reduction in system testing time, showcasing my commitment to innovation and efficiency. I also successfully debugged C++ based full system regression testing software, ensuring its reliability and functionality. Taking on the role of training the Validation and Verification team in the proficient use of testing software not only fostered team collaboration but also facilitated skill development. Furthermore, my cross-functional collaboration led to the successful implementation of Jenkins and SonarQube for automated code checks, streamlining our development process. Additionally, I designed and developed a user-friendly Script Development environment for automated tests, enhancing overall efficiency. Lastly, I introduced effective revision control practices using GIT within the team, ensuring code integrity and effective version management. This experience provided valuable insights into how large firms initiate new software projects and maintain existing software systems.
+
+
+
+
+		</p>
 	</div>
 	
 </body>
