update toronto star experience

--- a/Work/torontostar/index.html
+++ b/Work/torontostar/index.html
@@ -44,7 +44,10 @@
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-				<li>Responsible for selling newspaper subscriptions door to door</li>
+				<li>prospected and generated leads in designated neighborhoods to promote newspaper subscriptions.</li>
+				<li>Delivered compelling sales pitches to homeowners, highlighting the benefits of subscribing to our newspaper.</li>
+				<li>Maintained accurate records of sales activities, customer interactions, and subscription details for reporting purposes.</li>
+				<li>Strictly adhered to company policies, including ethical sales practices and data protection regulations.</li>
 			</ul>
 		</div>
 	</div>
@@ -55,9 +58,13 @@
 		    	<div id="ksa">
 					<h2>Knowledge, Skills and Abillities</h2>
 					<ul>
-						<li>Sales</li>
-						<li>Communication</li>
-						<li>Organization</li>
+
+						<li>Sales and prospecting</li>
+						<li>Persuasive communication</li>
+						<li>Customer service</li>
+						<li>Record keeping</li>
+						<li>Adherence to policies</li>
+						<li>Self-motivation</li>
 					</ul>
 				</div>
 				<div id="gsf">
@@ -75,7 +82,7 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>This was not an easy job to do. Going door to door trying to sell newspaper subscriptions was extremely tiring. This job really tested my sales skills and helped me become a lot more outgoing.</p>
+		<p>Reflecting on this experience, I recognize that it was a challenging endeavor. The demanding nature of going door to door to sell newspaper subscriptions was physically and mentally exhausting. However, it served as a rigorous testing ground for my sales acumen and pushed me to develop into a more extroverted and resilient professional.</p>
 	</div>
 	
 </body>
