--- a/Projects/capstone/index.html
+++ b/Projects/capstone/index.html
@@ -43,15 +43,19 @@
 		<p class="lead" id="company">McMaster University Engineering Capstone</p>
 		<div class="container">
 	    	<h2>Project Description</h2>
-			<p>The objective of this project is to create a smart, semi-autonomous, medical walker. The lists below
-			include the primary and secondary goals identified for this project. These goals are the anticipated
-			features for the target user within this design project.</p>
+			<p>The primary objective of this project was the development of a sophisticated semi-autonomous medical walker. The following lists delineated the primary and secondary goals established for this project, encompassing the envisioned functionalities for the intended user base.</p>
 			<ol>
-				<li>Modify a standard walker to autonomously drive itself away to a ‘station’ when the user no longer requires the walker. The walker can autonomously track, navigate, and move to the a predefined ‘stations’.</li>
-				<li>User can remotely prompt the walker to return to them from the product’s current location.</li>
-				<li>The walker will be capable of actively braking upon detecting any rapid changes in elevation. For example, if a steep slope, stairs, or a sudden drop in the ground is detected.</li>
-				<li>Maintain the primary functionalities of the common medical walker while augmenting its functionality by adding features in line with the above goals.</li>
+				<li>Adaptation of a conventional walker to autonomously transport itself to a designated 'station' when it was no longer needed by the user. The walker possessed the capability to independently track, navigate, and relocate to predefined 'stations.'</li>
+				<li>Implementation of remote user-initiated functionality, enabling users to prompt the walker to return to their location from its current position.</li>
+				<li>Integration of advanced safety features, including the walker's ability to actively apply brakes when it detected sudden changes in elevation, such as steep slopes, stairs, or abrupt ground-level drops.</li>
+				<li>Enhancement of the core functionalities inherent to a typical medical walker, while incorporating additional features aligning with the aforementioned project objectives.</li>
 			</ol>
+			<p>This project aimed to innovate and improve upon the conventional medical walker, equipping it with intelligent and user-friendly features to enhance the mobility and safety of its users.
+
+
+
+
+			</p>
 		</div>
 	</div>
 
@@ -60,7 +64,7 @@
 		  <div class="row">
 		  	<div class="col-sm">
 		  		<h2>My Role</h2>
-		  		<p>In this project I took charge of all of the Mechanical components of the walker. This was an easy decision as most of my group mates were trianed in software and electrical systems. I also supported my team with any development and testing they conducted.</p>
+		  		<p>In the course of this project, I assumed responsibility for overseeing all mechanical components of the walker. This decision was straightforward, given that the majority of my team members possessed expertise in software and electrical systems. Additionally, I provided valuable support to my team in their development and testing endeavors. </p>
 		  	</div>
 		  	<div class="col-sm">
 		  		<img width="100%" class="priority1 hiddenfalse" src="CADdesign.png">
@@ -116,7 +120,7 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>This was a very challenging project. having a team of 8 focused on a single school project can be a bit daunting. We divided responsibilities very early in the project so that things would run smoothly. Even then there were a few problems with communication as it was dificult to have group meetings, given our schedule. In retrospect, a tool like trello would have made it much easier to coordinate tasks. Ultimate the project ended well and we had an electric walker capable of driving around the room while detecting obsticles.</p>
+		<p>This project presented notable challenges. Managing a team of eight members dedicated to a single school project could be quite formidable. To ensure efficient operations, we promptly allocated responsibilities. Nevertheless, communication posed some difficulties due to our schedules, making it challenging to convene group meetings. In hindsight, employing a tool like Trello would have greatly facilitated task coordination. Ultimately, the project concluded successfully, resulting in the development of an electric walker capable of autonomously navigating a room while detecting obstacles.</p>
 	</div>
 	
 </body>
