update website entry

--- a/Projects/website/index.html
+++ b/Projects/website/index.html
@@ -39,7 +39,12 @@
 		<p class="lead" id="company"></p>
 		<div class="container">
 	    	<h2>Project Description</h2>
-			<p>A an excuse for better learnign web development I decided to make a website to keep track of my work. The aim of the site was to showcase projects I have been a part of and and places I have worked. Conpared to <a href="https://prakhargarg.me/Education/webdesign/index.html">course I took at Ryerson</a>, this was a significantly more satisfying way to learn front end development.</p>
+			<p>As a means to enhance my web development skills, I embarked on the creation of a personal website to monitor my progress. The primary objective of the website was to showcase my contributions to various projects and my professional experiences. In comparison to the courses I pursued at Ryerson University, this self-initiated project provided a substantially more gratifying avenue for mastering front-end development.
+
+
+
+
+			</p>
 		</div>
 	</div>
 
@@ -54,7 +59,7 @@
 					<h2>Knowledge, Skills and Abillities</h2>
 					<ul>
 						<li>HTML5</li>
-						<li>CSS</li>
+						<li>CSS3</li>
 						<li>javascript</li>
 						<li>Bootstrap</li>
 						<li>GIT</li>
@@ -87,7 +92,7 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>This is a fun project. I got to learn a lot about webdevelopment and got a usefull website out of it. I plan to keep updating this site for as long as i can so that I can keep learning new tools to help enhance the site. FUrthermore it is a good way to track my portfolio of work.</p>
+		<p>This project proved to be an enjoyable endeavor through which I acquired extensive knowledge of web development, resulting in the creation of a valuable and functional website. My intention is to continually update and refine this site, thereby perpetuating my learning journey and incorporating new tools to enhance its functionality. Additionally, this platform serves as a valuable tool for meticulously cataloging my portfolio of work.		</p>
 	</div>
 	
 </body>
