--- a/Projects/Strangers/index.html
+++ b/Projects/Strangers/index.html
@@ -39,7 +39,7 @@
     <p class="lead" id="company">McMaster University Engineering Capstone</p>
     <div class="container">
         <h2>Project Description</h2>
-      <p>Strangers is an android application developed by me and three of my peers at a hackathon in Duke University, HackDuke. The aim of the project was to develop a fun ecosystem for people to chat and communicate with strangers while using APIs provided by Facebook, FireBase and IBM. Over 24 hours my team and I planned and designed the app to scan your recent posts on Facebook and pair you with someone who has the opposite personality as you. The aim of the app was to help connect people from different backgrounds and help the community appreciate the difference in personalities.</p>
+        <p>"Strangers" was an Android application that my three peers and I developed during the HackDuke hackathon at Duke University. The project's objective was to create an engaging platform for individuals to interact and converse with strangers, utilizing APIs from Facebook, Firebase, and IBM. Within the span of 24 hours, our team meticulously planned and designed the app, implementing a feature that scanned a user's recent Facebook posts and matched them with someone of the opposite personality. The app's overarching goal was to foster connections among individuals from diverse backgrounds and promote an appreciation for the diversity of personalities within the community.</p>
     </div>
   </div>
 
@@ -51,13 +51,13 @@
         </div>
         <div class="col-sm">
           <h2>Future Plans</h2>
-          <p>Future plans for the application involved creating a more intuitive interface with improved branding. Furthermore we wanted to have the app passively block offensive content or anything that violated our terms of use. This social experiment would help us understand how well people will opposite personalities interact with each other and provide insight into potential problems or advantages.</p>
+          <p>Future plans for the application entailed developing a more intuitive interface with enhanced branding. Additionally, we aimed to implement a feature that would passively block offensive content or any material that violated our terms of use. This social experiment was intended to assist us in gauging the interactions between individuals with contrasting personalities and gaining insight into potential issues or advantages that might arise.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-sm">
           <h2>My Role</h2>
-          <p>In this porject I was responsible for Working with the <a src="https://www.ibm.com/watson/services/personality-insights/"> Watson personaity insights API</a> to generate a character profile of the person. The profile returned data the person's personality characteristics, needs and values. this was my first time working with a web API so this was fairly challenging for me. I worked with a mentor from Google who taught me the basic commands and how to navigate IBM's security.</p>
+          <p>In this project, my role involved working with the <a href="https://www.ibm.com/watson/services/personality-insights/">Watson Personality Insights API</a> to create a comprehensive character profile for the individuals involved. The profile encompassed details regarding their personality traits, needs, and values. This marked my inaugural experience in working with a web API, presenting me with a considerable learning curve. To navigate this challenge effectively, I sought guidance from a mentor affiliated with Google, who provided instruction on fundamental commands and familiarized me with IBM's security protocols.</p>
         </div>
         <div class="col-sm">
           <img width="100%" class="priority1 hiddenfalse" src="Screen 2.jpg">
@@ -89,7 +89,7 @@
       <div class="row">
         <div class="col-sm">
           <h2>Challenges</h2>
-          <p>This was a very challenging project for me as i knew nothing about any of the topics i was about to explore. THis was completely out of my comfort zone</p>
+          <p>This project presented a considerable challenge for me as I had limited prior knowledge about the topics I needed to delve into. It pushed me beyond my comfort zone.</p>
         </div>
         <div class="col-sm">
           <img width="100%" class="priority1 hiddenfalse" src="">
@@ -100,7 +100,7 @@
   </div>
   <div name="" class="container" id="Reflection">
     <h2>Reflection</h2>
-    <p>While developing Strangers with my team I gained a lot of firsthand experience and mentorship working with the Google android SDK and learning the basics of how to develop the front end of the application. The data we received from Facebook was packaged as a JSON file. Our app repackaged the file to better work with IBM's Bluemix servers. In Bluemix I learned how to code in node.js and interface with Watson. Watson was the computation engine responsible for analysing the data packets sent to Bluemix and respond with a personality profile. The data was used to pair users who were directed to a FireBase script that allowed us to quickly set up a messenger feed between two users.</p>
+    <p>While developing Strangers with my team, I acquired substantial firsthand experience and received mentorship in utilizing the Google Android SDK and mastering the fundamentals of front-end application development. The data sourced from Facebook was formatted as a JSON file, which we subsequently reconfigured within our app to optimize compatibility with IBM's Bluemix servers. Within the Bluemix environment, I gained proficiency in coding with Node.js and interfacing with Watson, the computation engine responsible for analyzing the data packets transmitted to Bluemix and generating personality profiles in response. This data was employed to pair users, directing them to a Firebase script that facilitated the swift establishment of a messenger feed between two individuals.</p>
   </div>
   
 </body>
