--- a/Projects/QuadSim/index.html
+++ b/Projects/QuadSim/index.html
@@ -39,7 +39,7 @@
     <p class="lead" id="company">Rutgers University</p>
     <div class="container">
       <h2>Project Description</h2>
-      <p>QuadSim was the first project I worked on in a hackathon. The aim of the project was to get familiar with Microsoft's Kinnect developer kit and use it to create an intuitive game. My group and I decided to create a Quadcopter simulator where the hand movements would determine the yaw, pitch, and roll as well as the throttle speed. We used the Unitiy game engine to interface with the sensor and to control all aspects of the simulator. The sensor viewed the angles of both the player's hand and provided an experience similar to using the wheel on an airplane.</p>
+      <p>QuadSim marked my initial foray into hackathons, serving as a pivotal learning experience. The primary objective of this project was to acquaint ourselves with Microsoft's Kinect developer kit and harness its capabilities to craft an intuitive game. Collaborating closely with my team, we opted to design a Quadcopter simulator wherein hand movements determined yaw, pitch, roll, and throttle speed. Leveraging the Unity game engine, we seamlessly interfaced with the sensor, exerting precise control over all simulator components. The sensor adeptly captured the angles of the player's hands, providing an immersive experience akin to operating an airplane's control wheel.</p>
     </div>
   </div>
 
@@ -48,7 +48,7 @@
       <div class="row">
         <div class="col-sm">
           <h2>My Role</h2>
-          <p>What I found exciting about this project was that I could apply my knowledge in mechanical design and simulation to create a basic simulator. The models in this project were designed on Autodesk Inventor and the textures were applied on Blender. This project was the first time I worked in a team for a pure software based application. Through this experience I learned how essential it is to create modular code. Furthermore my team and I got a chance to be mentored by software developers from Microsoft and learned a lot about the Kinnect sensor.</p>
+          <p>What excited me about this project was the opportunity to apply my mechanical design and simulation expertise to develop a fundamental simulator. The project involved designing models using Autodesk Inventor and applying textures through Blender. Significantly, this endeavor marked my inaugural collaboration within a team dedicated to a purely software-based application. This experience underscored the importance of creating modular code for efficient development. Moreover, my team and I had the privilege of being mentored by seasoned software developers from Microsoft, providing invaluable insights into the intricacies of the Kinect sensor.</p>
         </div>
         <div class="col-sm">
           <img width="100%" class="priority1 hiddenfalse" src="QuadSIM.JPG">
@@ -95,7 +95,7 @@
   </div>
   <div name="" class="container" id="Reflection">
     <h2>Reflection</h2>
-    <p>The project proceeded to win the Company API prize from Microsoft at a hackathon in Rutgers University (HACK RU). As a result my team and I got to meet a lot of representatives from different companies and get their opinion and feedback on our project. The source code to our project is publically available on the team <a href="https://github.com/SNavleen/QuadSim">GIT</a></p>
+    <p>The project achieved notable recognition by winning the Company API prize from Microsoft at the HACK RU hackathon hosted at Rutgers University. Consequently, my team and I had the privilege of engaging with numerous representatives from various companies, soliciting their valuable opinions and feedback on our project. Our project's source code is publicly accessible on the team's <a href='https://github.com/SNavleen/QuadSim'>GitHub repository</a>.</p>
   </div>
   
 </body>
