--- a/Projects/EcoCAR/index.html
+++ b/Projects/EcoCAR/index.html
@@ -39,7 +39,7 @@
 		<p class="lead" id="company">McMaster University</p>
 		<div class="container">
 	    	<h2>Project Description</h2>
-			<p><a href="http://ecocar3.org/">EcoCAR 3</a> is the latest in the U.S. Department of Energy (DOE) Advanced Vehicle Technology Competition (AVTC) series.  AVTC represents a unique collaboration between government, industry, and academic partners who combine resources to explore sustainable transportation solutions. Sixteen North American Universities have been challenged to re-engineer a Chevrolet Camaro into a hybrid-electric vehicle over a course of 4 years.</p>
+			<p><a href="http://ecocar3.org/">EcoCAR 3</a> represented the latest installment in the U.S. Department of Energy (DOE) Advanced Vehicle Technology Competition (AVTC) series. AVTC stood as a distinctive collaboration uniting government, industry, and academic partners, pooling their resources to investigate sustainable transportation solutions. Sixteen North American universities embarked on the challenge of transforming a Chevrolet Camaro into a hybrid-electric vehicle over a span of four years.</p>
 		</div>
 	</div>
 
@@ -48,7 +48,9 @@
 		  <div class="row">
 		  	<div class="col-sm">
 		  		<h2>My Role</h2>
-		  		<p>This project has many different roles, as each team is required to design, simulate, modify and test the vehicle power-trains. For the year I was involved with the low level software development of the car. I have helped program new functionality and in the process learned a lot about the development process of the car. During the year I have been able to apply my knowledge in C# to programming Freescale processors to execute certain tasks. Before writing the code my team and I were required to create appropriate documentation. We created Interface specifications and test scenarios to validate the logic before compiling the code. This allowed me to apply my knowledge about the software development process and create appropriate documentation before constructing efficient code.</p>
+				<p>In this project, there were various roles, with each team responsible for designing, simulating, modifying, and testing the vehicle powertrains. During the year I was involved, my focus was on the low-level software development of the car. I assisted in programming new functionalities and, in the process, gained valuable insights into the car's development process. Throughout the year, I applied my knowledge of C# to program Freescale processors for specific tasks.
+
+					Prior to coding, my team and I meticulously prepared the necessary documentation. This involved creating interface specifications and test scenarios to validate the logic before code compilation. This approach allowed us to implement sound software development practices, ensuring efficient and effective code construction.</p>
 		  	</div>
 		  	<div class="col-sm">
 		  		<img src="10314570_791737187547731_7611673542938501951_n.jpg" width="100%">
@@ -93,7 +95,7 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>As amazing at this porject was I left like I was very underprepared for my role. As a second year student I knew very little so spent most of my life learning about CAN and I2C among other things. THis was an amazing learning experience adn the organization of the team greatly impacted how i managed future projects.</p>
+		<p>While this project was truly remarkable, I personally felt somewhat underprepared for my role. Being a second-year student at the time, I possessed limited knowledge, which led me to dedicate a significant portion of my time to learning about crucial concepts like CAN and I2C, among others. This experience served as an invaluable learning opportunity, reshaping my approach to project management as I progressed in my academic and professional journey.		</p>
 	</div>
 	
 </body>
