--- a/Projects/QuadSim/index.html
+++ b/Projects/QuadSim/index.html
@@ -39,7 +39,7 @@
     <p class="lead" id="company">Rutgers University</p>
     <div class="container">
       <h2>Project Description</h2>
-      <p>QuadSim marked my initial foray into hackathons, serving as a pivotal learning experience. The primary objective of this project was to acquaint ourselves with Microsoft's Kinect developer kit and harness its capabilities to craft an intuitive game. Collaborating closely with my team, we opted to design a Quadcopter simulator wherein hand movements determined yaw, pitch, roll, and throttle speed. Leveraging the Unity game engine, we seamlessly interfaced with the sensor, exerting precise control over all simulator components. The sensor adeptly captured the angles of the player's hands, providing an immersive experience akin to operating an airplane's control wheel.</p>
+      <p>QuadSim was the first project I worked on in a hackathon. It served as a pivotal learning experience. The primary objective of this project was to get familiar Microsoft's Kinect developer kit and harness its capabilities to craft an intuitive game. Collaborating closely with my team, we opted to design a Quadcopter simulator wherein hand movements determined yaw, pitch, roll, and throttle speed. Leveraging the Unity game engine, we seamlessly interfaced with the sensor, exerting precise control over all simulator components. The sensor adeptly captured the angles of the player's hands, providing an immersive experience akin to operating an airplane's control wheel.</p>
     </div>
   </div>
 
