--- a/Projects/SumoBot/index.html
+++ b/Projects/SumoBot/index.html
@@ -39,7 +39,7 @@
 		<p class="lead" id="company">McMaster University</p>
 		<div class="container">
 	    	<h2>Project Description</h2>
-			<p>The McMaster SumoBot group was founded by Vinay Yuvashankar as an effort to help the Mechatronics Engineering students at McMaster to gain more practical experience in the field. Over the past two years I have competed in and helped organise the event. The event helped me learn a lot about how a club at McMaster operates. I got first had experience in filing out the necessary paperwork and creating proper documentation to ensure that others can perform my duties once I have graduated.</p>
+			<p>The McMaster SumoBot group was established by Vinay Yuvashankar with the aim of providing Mechatronics Engineering students at McMaster with practical field experience. In the past two years, I participated in and assisted in organizing the event. This experience enabled me to gain insights into the functioning of a McMaster club. I acquired firsthand experience in completing the requisite paperwork and creating comprehensive documentation to ensure the seamless transition of responsibilities once I graduate.</p>
 		</div>
 	</div>
 
@@ -48,7 +48,7 @@
 		  <div class="row">
 		  	<div class="col-sm">
 		  		<h2>My Role</h2>
-		  		<p>I was the Vice Presidents of Parts in the club. I was responsible for creating an economic kit of parts for each team that competed. I had to stay in regular communication with the Vice President of Finance and the President of the club to ensure that the parts being ordered were within the clubs budget. While performing my duties I learned about the many hardware and electronics distributors in the Greater Toronto and Hamilton Area. My primary focus at the club was to ensure that all the teams received quality parts sufficient to build an average robot.</p>
+				<p>I served as the Vice President of Parts in the club. My responsibilities included creating an economical kit of parts for each competing team. I maintained regular communication with the Vice President of Finance and the President of the club to ensure that the parts ordered adhered to the club's budget. While fulfilling my duties, I acquired knowledge about numerous hardware and electronics suppliers in the Greater Toronto and Hamilton Area. My primary objective within the club was to guarantee that all teams received high-quality parts sufficient for constructing an average robot.</p>
 		  	</div>
 		  	<div class="col-sm">
 		  		<img width="100%" class="priority1 hiddenfalse" src="Project SumoBot.jpg">
@@ -81,7 +81,7 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>It was awesome to work with a great group of execs to organize this project. It taught me a lot about organising formal events at the university. I had a lot fo fun during this and made many long lasting friends.</p>
+		<p>It was fantastic to collaborate with a remarkable group of executives to orchestrate this project. It provided me with valuable insights into organizing formal events at the university. I thoroughly enjoyed the experience and forged many long-lasting friendships.		</p>
 	</div>
 	
 </body>
