--- a/Projects/Quadcopter/index.html
+++ b/Projects/Quadcopter/index.html
@@ -38,7 +38,7 @@
 		<p class="lead float-right" id="date">2014</p>
 		<div class="container">
 	    	<h2>Project Description</h2>
-			<p>This was just a fun project where i wanted to design and build a quadcopter. All fo the cad work was done in Autodesk Iinventor with some wind tunnel testing on Autodesk Flow. THis project was not completed as I lacked the capability to manufacture some of the parts.</p>
+			<p>This was a fun project where I aimed to design and construct a quadcopter. All of the CAD work was completed in Autodesk Inventor, with some wind tunnel testing conducted using Autodesk Flow. Unfortunately, the project remained unfinished because I lacked the means to manufacture certain components.</p>
 		</div>
 	</div>
 
@@ -47,7 +47,7 @@
 		  <div class="row">
 		  	<div class="col-sm">
 		  		<h2>My Role</h2>
-		  		<p>THis was a persal project. I was responsible for the scope, designing, procuring and manufacturing of the quadcopeter. At the time manufacturing was a huge challenge so the project was not completed.</p>
+				<p>This was a personal project for which I assumed responsibility. I was tasked with defining the scope, designing, procuring materials, and overseeing the manufacturing of the quadcopter. However, manufacturing posed a significant challenge at the time, ultimately leading to the project's unfinished status.</p>
 		  	</div>
 		  	<div class="col-sm">
 		  		<img width="100%" class="priority1 hiddenfalse" src="logo.jpg">
@@ -57,7 +57,7 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>After designing and aquiring all of the parts, it was heartbreaking to find out that i would not be able to machine some of the marts given my limited number of tools. the project has since been abandoned but left me with an important lesson. Always design products based on the tooling immediately available.</p>
+		<p>After designing and acquiring all the necessary parts, it was disheartening to discover that I would not be able to machine some of the components due to my limited set of tools. Consequently, the project was abandoned, leaving me with a valuable lesson: always design products with consideration for the available tooling.		</p>
 	</div>
 	
 </body>
